--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,19 +3,26 @@ version: '3.8'
 services:
   flask:
     build:
-      context: .
+      context: .  
     container_name: flask-app
     ports:
       - "5000:5000"  
     depends_on:
-      - mongodb 
+      - mongodb  
+    networks:
+      - flask-mongo-network
 
   mongodb:
-    image: mongo:latest
+    image: mongo:latest  
     container_name: mongodb
     ports:
       - "27017:27017"  
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin  
-      MONGO_INITDB_ROOT_PASSWORD: password 
+      MONGO_INITDB_ROOT_PASSWORD: password  
+    networks:
+      - flask-mongo-network
+
+networks:
+  flask-mongo-network:
 
