--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,11 @@ services:
       - "5000:5000"  
     depends_on:
       - mongodb  
+    environment:
+      - MONGO_USERNAME=${MONGO_USERNAME} 
+      - MONGO_PASSWORD=${MONGO_PASSWORD}  
+      - MONGO_HOST=${MONGO_HOST} 
+
     networks:
       - flask-mongo-network
 
@@ -18,11 +23,10 @@ services:
     ports:
       - "27017:27017"  
     environment:
-      MONGO_INITDB_ROOT_USERNAME: admin  
-      MONGO_INITDB_ROOT_PASSWORD: password  
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME}  
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}  
     networks:
       - flask-mongo-network
 
 networks:
   flask-mongo-network:
-
