--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,62 @@
 version: '3.8'
 
 services:
-  flask:
+  flask-app-db:
     build:
-      context: .  
-    container_name: flask-app
-    ports:
-      - "5000:5000"  
-    depends_on:
-      - mongodb  
+      context: .
+    container_name: flask-app-db
     environment:
-      - MONGO_USERNAME=${MONGO_USERNAME} 
-      - MONGO_PASSWORD=${MONGO_PASSWORD}  
-      - MONGO_HOST=${MONGO_HOST} 
-
+      - FLASK_ENV=development
+      - MONGO_USERNAME=admin
+      - MONGO_PASSWORD=password
+      - MONGO_HOST=mongodb
+    ports:
+      - "5001:5000"  # Flask App connected to MongoDB
+    depends_on:
+      - mongodb
     networks:
-      - flask-mongo-network
+      - flask-network
+
+  flask-app-simple:
+    build:
+      context: .
+    container_name: flask-app-simple
+    command: ["python", "app_simple.py"]
+    environment:
+      - FLASK_ENV=development
+    ports:
+      - "5002:5000"  # Flask App without MongoDB
+    networks:
+      - flask-network
 
   mongodb:
-    image: mongo:latest  
+    image: mongo:latest
     container_name: mongodb
-    ports:
-      - "27017:27017"  
     environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME}  
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}  
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: password
+    ports:
+      - "27017:27017"  # MongoDB
+    volumes:
+      - mongo-data:/data/db
     networks:
-      - flask-mongo-network
+      - flask-network
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    ports:
+      - "80:80"  # NGINX as Load Balancer
+    volumes:
+      - "./nginx.conf:/etc/nginx/nginx.conf"  # NGINX config
+    depends_on:
+      - flask-app-db
+      - flask-app-simple
+    networks:
+      - flask-network
+
+volumes:
+  mongo-data:
 
 networks:
-  flask-mongo-network:
+  flask-network:
